# Jbd

./: .gitignore  LICENSE  README.md
example/: a.mid  b.mid
ml/: bar_fit.py  inf.py  midi_gen.py  model.pt  requirements.txt
vst/: CMakeLists.txt  Main.cpp  MainComponent.h
